# immo_bee

./: .deleteme.txt.swp  .gitignore  2021-02-28-hamburg-haeuser-kaufen.txt  2021-02-28-hamburg-wohnungen-kaufen.txt  2021-02-28-ludwigslust-meckl-haus-mieten.txt  2021-02-28-ratzeburg-haus-mieten.txt  2021-04-13-berlin-haus-kaufen.txt  2021-04-13-berlin-haus-mieten.txt  2021-04-13-berlin-wohnungen-kaufen.txt  2021-04-13-berlin-wohnungen-mieten.txt  2021-04-13-luebeck-hansestadt-haus-kaufen.txt  2021-04-13-luebeck-hansestadt-haus-mieten.txt  2021-04-13-luebeck-hansestadt-wohnungen-kaufen.txt  2021-04-13-luebeck-hansestadt-wohnungen-mieten.txt  2021-04-24-norderstedt-haus-kaufen.txt  2021-04-24-norderstedt-haus-mieten.txt  2021-04-24-norderstedt-wohnungen-kaufen.txt  2021-04-24-norderstedt-wohnungen-mieten.txt  2021-04-29-berlin-haus-kaufen.txt  2021-04-29-berlin-haus-mieten.txt  2021-04-29-berlin-wohnungen-kaufen.txt  2021-04-29-berlin-wohnungen-mieten.txt  2021-04-29-norderstedt-haus-kaufen.txt  2021-04-29-norderstedt-haus-mieten.txt  2021-04-29-norderstedt-wohnungen-kaufen.txt  2021-04-29-norderstedt-wohnungen-mieten.txt  Cleaning data.ipynb  ExposeBerlin.txt  README.md  beispiel_haus_kaufen.html  beispiel_haus_mieten.html  beispiel_wohnung_kaufen.html  credentials.json  data.json  deleteme.txt  downloading_prices.py  environment.yaml  environment.yml  main.py  pyproject.toml  (+9 more)
.github/workflows/: python-publish.yml
notebooks/: Cleaning data.ipynb
scr/: cleaning.py  getargs.py  scraping.py  test_xpath_in_beautiful_soup.py
scr/immowelt_analyzer/: immowelt_analyzer.py
src/immo_bee/: __init__.py  __main__.py  cleaning.py  getargs.py  immo_bee.py  scraping.py
tests/: test_scraping.py
