[metadata]
name = immo-bee
version = 0.0.14
author = Dirk Ulbricht
author_email = dirk.ulbricht@gmail.com
description = Scrapes housing data from German immowelt and returns table.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/immo_bee
project_urls =
    Bug Tracker = https://github.com/pypa/immo_bee/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = immo_bee
python_version = '>=3.8'
install_requires = 
    selenium
    lxml
    pandas
    urllib3
    beautifulsoup4
    scikit_learn

