[metadata]
name = immo-bee
version = 0.2.1
author = Dirk Ulbricht
author_email = dirk.ulbricht@gmail.com
description = Scrapes housing data from German immowelt and returns table.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/immo_bee
project_urls =
    Bug Tracker = https://github.com/pypa/immo_bee/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_version = '>=3.8'
install_requires = 
    selenium>=3.141.0
    lxml>=4.6.2
    pandas>=1.3.2
    urllib3>=1.26.2
    beautifulsoup4>=4.9.3
    scikit_learn>=0.24.2

[options.packages.find]
where=src

