[metadata]
name = immo-bee
version = 1.0.5
author = Dirk Ulbricht
author_email = dirk.ulbricht@gmail.com
description = Scrapes housing data from German immowelt and returns table.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/immo_bee
project_urls =
    Bug Tracker = https://github.com/pypa/immo_bee/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find_namespace:
python_version = '>=3.10'
install_requires = 
    selenium>=4.9.0
    lxml>=4.9.3
    pandas>=2.1.1
    urllib3>=1.26.18
    beautifulsoup4>=4.12.2
    scikit-learn>=1.2.0
    boto3

[options.packages.find]
where=src

